--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 					>&</span
 				>
 				<h4>Widya Fitriani</h4>
-				<p>Rabu, 18 Juni 2025 | 10:00 WIB - Selesai</p>
+				<p>Rabu, 18 Juni 2025 | 10:00 WITA - Selesai</p>
 				<hr />
 				<p>Kepada Yth.<br /><strong>Bapak/Ibu/Saudara/i</strong></p>
 				<h4 style="color: #f15b6c" id="guest-name">-</h4>
